# peel

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile  mkdocs.yml  plan.md  pyproject.toml
.github/workflows/: release.yml
docs/: index.md  modules.md
html_report/src/components/: FilePanel.tsx  FileSizeList.tsx  FileTreeSplit.tsx
html_report/src/lib/: tree.ts
src/: main.rs  progress.rs
src/cmd/: inspect.rs  mod.rs  self_update.rs
src/inspector/: archive.rs  docker_archive.rs  mod.rs  oci.rs  overlay2.rs
tests/: test_foo.py
