[package]
name = "docker-layers"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
crossterm = "0.29.0"
flate2 = "1.1.9"
indicatif = "0.18.4"
oci-spec = "0.9.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.44"
tokio = { version = "1.49.0", features = ["full"] }
